# fire_detection

./: package.xml  setup.cfg  setup.py
argos_gazebo/: CMakeLists.txt  __init__.py  argos_gazebo.launch.py  quadrotor_node.py  setup.py
argos_gazebo/launch/: argos_gazebo.launch.py  argos_world.launch.py  x1_node.py
argos_gazebo/worlds/: parking_garage
